--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,15 @@
     <artifactId>maven</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.fxml</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 
 </project>
