entities mapping hibernate config

--- a/pom.xml
+++ b/pom.xml
@@ -19,4 +19,12 @@
         </resources>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.0.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
