--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
                     <include>**/*.fxml</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>src/main/java/resources</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+            </resource>
         </resources>
     </build>
 
@@ -40,8 +46,6 @@
             <artifactId>hibernate-jpa-2.0-api</artifactId>
             <version>1.0.1.Final</version>
         </dependency>
-
-
 
     </dependencies>
 
